VPC_CF/LaunchEC2InVPC.yml
# Map AMI ID based on region
Mappings:
  RegionMap:
    us-east-1:
      AMI: ami-0c2b8ca1dad447f8a
    us-west-1:
      AMI: ami-04b6c97b14c54de18

# Creates a parameter to select the Instance type. 
Parameters: 
  InstanceTypeParameter: 
    Type: String
    Default: t2.micro
    AllowedValues: 
      - t2.micro
      - m1.small
      - m1.large
    Description: Enter t2.micro, m1.small, or m1.large. Default is t2.micro.

# Creates an Linux EC2 instance in Public subnet
  MyPublicEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      SubnetId: !Ref PublicSubnetA
      ImageId: !FindInMap
        - RegionMap
        - !Ref 'AWS::Region'
        - AMI
      InstanceType: 
        Ref: InstanceTypeParameter
      KeyName: "EC2-NV"
      SecurityGroupIds:
        - !GetAtt MyPublicSecurityGroup.GroupId
      UserData:
        Fn::Base64: 
          !Sub |
            #!/bin/bash
            yum update -y
            yum install -y httpd
            systemctl start httpd
            systemctl enable httpd
            echo "<h1>Hello World from $(hostname -f)</h1>" > /var/www/html/index.html

# Creates an Linux EC2 instance in Private subnet
  MyPrivateEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      SubnetId: !Ref PrivateSubnetA
      ImageId: !FindInMap
        - RegionMap
        - !Ref 'AWS::Region'
        - AMI
      InstanceType: 
        Ref: InstanceTypeParameter
      KeyName: "EC2-NV"
      SecurityGroupIds:
        - !GetAtt MyPrivateSecurityGroup.GroupId
      UserData:
        Fn::Base64: 
          !Sub |
            #!/bin/bash
            yum update -y
            yum install -y httpd
            systemctl start httpd
            systemctl enable httpd
            echo "<h1>Hello World from $(hostname -f)</h1>" > /var/www/html/index.html

  # Create a security group for both public and private instances
  MyPublicSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access via port 22 and internet access via port 80 and port 443
      VpcId: !Ref MyCustomVPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIp: 0.0.0.0/0

  # Create a security group for  private instances
  MyPrivateSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref MyCustomVPC
      GroupDescription: Enable SSH access via port 22 
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
